@@ -1,3 +1,7 @@
+2018-12-08  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* chopstx.c (chx_timer_dequeue): Fix calculation of return value.
+
 2018-12-07  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* chopstx.c (chx_timer_dequeue): Return ticks remained.
